# ChangeLog for net-misc/spice-gtk
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/ChangeLog,v 1.40 2013/01/01 14:49:14 ago Exp $

  05 Jan 2013; Andrew John Hughes <andrew@gentoo.org>
  +files/0.12-parallel-install.patch,
  +files/0.14-Deal-with-libusbredirparser.pc-rename-to-libusbredir.patch,
  +spice-gtk-0.14-r1.ebuild,
  +files/0.14-446586-fix_srcdir_builddir_issue.patch, +files/spice.protocol,
  +files/spice.schemas, +metadata.xml:
  Fix for https://bugs.gentoo.org/show_bug.cgi?id=446586 srcdir != builddir
  issues.

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.14-r1.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Michał Górny <mgorny@gentoo.org> spice-gtk-0.14-r1.ebuild,
  spice-gtk-0.14.ebuild, spice-gtk-0.7.159.ebuild:
  Use virtual/pyparsing.

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.14-r1.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.14-r1.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> spice-gtk-0.14-r1.ebuild:
  Add ~ppc, wrt bug #449220

  04 Dec 2012; Doug Goldstein <cardoe@gentoo.org> spice-gtk-0.14-r1.ebuild:
  Use 'default' instead of specifying the commands

*spice-gtk-0.14-r1 (04 Dec 2012)

  04 Dec 2012; Doug Goldstein <cardoe@gentoo.org> +spice-gtk-0.14-r1.ebuild:
  Support gtk2 and gtk3 builds in the same ebuild. gtk2 is always on and gtk3
  is optional.

  04 Dec 2012; Doug Goldstein <cardoe@gentoo.org> -spice-gtk-0.8.ebuild,
  -spice-gtk-0.11.ebuild, -spice-gtk-0.12.ebuild, -spice-gtk-0.13.ebuild:
  Remove older versions

  03 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> spice-gtk-0.7.159.ebuild,
  spice-gtk-0.8.ebuild, spice-gtk-0.11.ebuild, spice-gtk-0.12.ebuild,
  spice-gtk-0.13.ebuild, spice-gtk-0.14.ebuild:
  Use virtual/udev instead of sys-fs/udev wrt #444398
