@@ -1,6 +1,6 @@
 AUX flite-1.4-audio-interface.patch 520 SHA256 405320984e098c3d788b7751935b2774972ee7970dbe0fef0718ce1e5cc725c9 SHA512 06fea693abbb186e039cc371ce5cde2b77979964778a7c24d9d2d2de9994898fa8a8f2ff0a341fc97f813f61d6c9e7a011caa0963467398176ec04d69c750283 WHIRLPOOL 83902c9a8324cd25c188fb62d4012dcdea53df8cece4592384dc5aeb019c74a88fbd99b4f6f5ca6136d2de2ef3f0280811cb4f1a0d51dc9c0d114a9e13c1ae91
 AUX flite-1.4-fix-parallel-builds.patch 599 SHA256 bfd51888ea533bb9ee74cadb68b2e507cb715ab5043aa679b7f42ab52336a7a1 SHA512 5adf675aadc3493ad70b1e7f447a1d7c0ff9c11a7dce90afbc6ccc7c811cc7226a7b1591a1a819209b26e93bf48c11cdaa8db1cfd55eb884a66b054c79590509 WHIRLPOOL 3329456e3c0f7c759a6a849b2e9bb148f809b94979bc8bbd56d0a35e5191614f2f4281d24899b85461387070311ed3c811e9bfb447afbecf37c58d60a69a2bba
-AUX flite-1.4-ldflags.patch 1773 SHA256 b8d099434f2758e5bfb785b0e49fcf77ef520587d719e0935cfce1edb7a7c1a6 SHA512 b4df51d300853116b081bdefd1103f27be1eb536de64cc5f59d4e3267de235e1454545886673628eea65433f14ff08e3d4a1faccbf32cbd04f32843a95ee5274 WHIRLPOOL 6d32f624ff5c9e1640f7dc526e0052f60b97b4c968149093e57b20ec14991cf33b9ef7c3561cd921574ccfec9f544bc27e58d045f8005df00529211f4c4dfa95
+AUX flite-1.4-ldflags.patch 1782 SHA256 9da3e929f94e786aa50433b0f9cad12f413661971c1d9b5c0b5596f4c8deb797 SHA512 145b65c243b2dcea5f71f79d2a0fdd2c6da94fb81e2bacdc512f59b92f7920051cb5243930599a1893aae01351c521f1cfbbbebbe4ea2a8428271d4921e02fd7 WHIRLPOOL 1c1c3415c8de5d5b1f3a2ee1268a2ef4e2460ac63f57427ed78d2ae74335e7c10320f877ac7aa8ce5d567e73c861dc758b37932cafbe124f8aeaf0ec46d0e6f3
 AUX flite-1.4-respect-destdir.patch 1902 SHA256 093538c3a7cd2b9b9edd1f0956a34c4261c3ccdd4feb55e8ecedc338562495f3 SHA512 acc37971361eda4ce91cf605e3ff7878842d605d12973c37ab80451e6a1f9dea96b54cbd39a9ca281f36f6ed6ec1e79af712692639f541c59a7cedad2af47de7 WHIRLPOOL 3585708abe73fc69c16aa747d565433c6eed1c682f17c8402ca50e5cce8fa99fb66e7848a19f301d50fbc96496f8ed4aeb8849d479ce9bfff2b949bbc9ddc6c9
 DIST flite-1.4-release.tar.bz2 15163897 SHA256 45c662160aeca6560589f78daf42ab62c6111dd4d244afc28118c4e6f553cd0c SHA512 eec1022077fb7a47db3848ae6944509e18a6c86a25aa24f921b8b6c2af708fc9811b287e76d96cf64fc68f8e1d0a43b7e878659f15bfcf76957eddd75e599112 WHIRLPOOL 5e641fe58fb1c28609154377f009691587a74fbbad7a621947ca06382e5e2da52d3be86f1388730c42dc2a671881320b37dfc10a91185e601d0838526ddae2f2
 EBUILD flite-1.4-r1.ebuild 1658 SHA256 f06f9914b2943488d980a425dd80a5a4cade26c1c56a4688c805fe627359c5c2 SHA512 138b91644fcec9f537cf6f78a01ca78f6a29eab5a2c325c9413687577cf8e50b0faf35858d913c2f4c8192df2f0bf01eb6b33d0ca57187c6055e5332202f1fbf WHIRLPOOL 9967d92a9bd5426ee7a3dafbd1dbb50aee65eb9905936055c6c78a4fd38bce07c0d0f1b0d37d63136ec7d26b006777342e18361cee7898b189d66a22d0d7b56b
