@@ -4,6 +4,8 @@ AUX 0.14-Deal-with-libusbredirparser.pc-rename-to-libusbredir.patch 2405 SHA256 
 AUX spice.protocol 159 SHA256 9a13ea202d5b26cbb45874c56df95d30c15a9372e55140426742f249f5b16525 SHA512 39be4ab9878e1c2eb77955e80c23b58d33b6695f1177fda675ba35330ac57c7973d354e58c2b3ffa2129badb9202799e9e07db450fbb9b2d0b123a5361e2ebda WHIRLPOOL 1df7713b6e574f23fec5164e89b16909b8a88ab4cde6204dc7f013b52e1a88018fa2a685560996dcb37df5057ce62a482599f5ef7fa217762abc6fb78c627051
 AUX spice.schemas 1305 SHA256 aa21d09f57e539a9206d88051f2b4d1a15e9eb3e8ea2d104bdcdcb677801ea14 SHA512 bf894c8970c92353df0849e532ac46f7e04a3344090ca70c325ea198aa1a10e94a71649f7648a867d18b07fddc2e87be67d82d332965fc5777466e4798bfa33e WHIRLPOOL 593b2c2bad2ec1c975838ac5665a143c96f04e14a9537863eedd58ee1b34653aaa538b1e1e0a81f756c32ecc5ea4b8e08a5f988ff0fc05759633f6610eb27702
 DIST spice-gtk-0.14.tar.bz2 1204821 SHA256 a16fa27364541493b886cc943f72c8f96ec251083af0a29d405a2c4f490274f5 SHA512 64510e098927d856ac8f05c6d9f07626ee280979fd792bb92f188ff11a15ff54b11acd0471a7e30c8f6fbc594a036c6642bd3369c0d231412ea9aece6d07bba1 WHIRLPOOL 16ce4c6cfb863c76026998239b5bbbd912cdeb5044afb8533020eaf255585863f41080bcc598b51efea3dc99b5e678508f1ece3f18a6dbae0d71e4bb81b513b9
+DIST spice-gtk-0.16.tar.bz2 1208505 SHA256 8de079f7ca44505762b9d0c91de8203dfcc6febb12d4ea3ec614de08852e25f9 SHA512 9d12d4c3b53da8b4248000cd935cdd19d0c8cb9227146d768620105858f20f5a326a533ef451c064b98a4caae350b009b4c680b8e77cd05fa92245bcf3801c6f WHIRLPOOL 5929b0806767c775c4a4f2b63ec4c1fedd164ee392c6aa4f5287ca7ecd69c0a5420cfc27a1178759c02af637ec6325dfa76dbc4e6fe50ccf41e652fe6192368a
 EBUILD spice-gtk-0.14-r1.ebuild 4378 SHA256 79991692e38525f273e2dd925189332ad63c2a5582c4f8eadf5a620510e4be94 SHA512 63b699044d9d7815bbbbbb4b40dda24582e5bd059c7185ae9a307520c1928c9d3296160f0ae6246f2711a63a6fa0a75e9a86f2862e3343de3c8a30d9b3442e38 WHIRLPOOL a1eab78feac47524ef7f20e3b11832038c48fe453117aa164e7b04ad802fb38c9b40a8ee423fb2a778005fe2aee3ed6c7e771240fb624f5dbb0879a860ea3239
-MISC ChangeLog 7105 SHA256 728fb9f91255f6a78f13af6f4207a28daefc8d5dae9c0e8e94276057eb23211f SHA512 8fe3e5354ea79553eafcc88f9dfe887256436329b825d337b670755e2163dfed5da596ed442e1e0f5a09fde13c06f75f5a9b7af9464d00bf87f1ee2947f3c506 WHIRLPOOL 0a784966f237d180e46c22cd2bd02c3ad6192b919d879821416c9e3a15bd515f76de8c5d16f3729bf4edc589eef68e11a9fb07c287cd6029efe6e49b6357b805
+EBUILD spice-gtk-0.16.ebuild 4379 SHA256 eba2c9c7a1726dcc7f2ee1407a7a5f5a69616d779b0fff905f4ba2a8072850a7 SHA512 ce44483773abf9eb03ca9e93ad3560d3d1ea64c5b701a139886cdbee8e3a690a150841c41968f10fb8d201ae01f5d476f650ccddf4b9efed69d2fbb98cd015f8 WHIRLPOOL 64fefa00e0c0ba761cb51705fe3da240377e308cfb0e47dd8cc6ed5a1c396f6eddd3138a16e50aab1e029e649d58625881a55a3c788a4a1e5f11769ed86efe16
+MISC ChangeLog 7292 SHA256 2c77ed8abaee671b03c1778ba95929e69e79d83738f2814c376de482173fd015 SHA512 111b810251e4994942e6dd8a067de7d6225044f8743a49a8d6b402034bd061c1dc8f21fbf4136773c3fa43c497f51d2675760ccbc5a4def971a3378b6bed0e84 WHIRLPOOL 41401932a472646fa7d28091a062936e53c0440aabe4baaa69e3c9643a9bf426a3d6408fbe641e880d566b09e826054afbc8e3ea2cba196d30984ae3277b5f03
 MISC metadata.xml 910 SHA256 b5785797bf26350dd7977d7f67a106aece090b33cfb7987fc95b2030ca382e40 SHA512 03e8e92a33dd924be8e1dc604298f4130d9711c19326d5831448da104dd2a35ea7394ed26dcda5b99ebefb3651f782e3a1c7326f23995f51f49862d5847e8d3c WHIRLPOOL 21ba69019c590542bfa1384fb29b4a7d5c5a28ba5e5fa411c3b47a453cf25939dadb0c8c5e56c90b67e652ac1f271421a228f7b0477b0a068e1300754b30cdb8
