@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/spice-gtk/ChangeLog,v 1.40 2013/01/01 14:49:14 ago Exp $
 
+*spice-gtk-0.16 (24 Jan 2013)
+
+  24 Jan 2013; Andrew John Hughes <andrew@gentoo.org> +spice-gtk-0.16.ebuild:
+  Add srcdir != builddir fix to latest ebuild. Still not fixed in main tree.
+
   05 Jan 2013; Andrew John Hughes <andrew@gentoo.org>
   +files/0.12-parallel-install.patch,
   +files/0.14-Deal-with-libusbredirparser.pc-rename-to-libusbredir.patch,
